    * Added ability to guess tags from whole track path. (TagGuesser dialog)
    * Use KDirWatch to watch changes to collection.
    * Do always store track rating as tags in files. Patch by Alan Ezusti
      <alan.ezust@gmail.com>. (BR 259117)
    * Added missing tooltip for animation settings. Patch by Bhargav Mangipudi
      <bhargav.1191@gmail.com>. (BR 248690)

  BUGFIXES:
    * Fixed unreadable text in lyrics applet in kde 4.6. (BR 265311)
    * Fixed tag dialog crash when sorting by genre and then changing tags.
    * Fixed track's statistics update in case of StopAfterCurrent playback mode
      (prevent double statistics change). (BR 265654)
    * Delete .mood files when tracks got removed from collection via Collection
      view context menu, and move them to new destination during Organize Collection process.
      (BR 261629)
    * Fixed "Configure Amarok..." disappearing in tray menu. (BR 258226)
    * Fixed crash when quitting Amarok. (BR 253676, BR 257407)
    * Fixed empty folders removal after collection organization. (BR 190881)
    * Fixed crash when trying to load cover for track/album without artist. (BR 263256)
    * Fixed linking on Solaris 11 (and others?). (BR 264112)
    * Fixed temporary podcast download filenames that were to long by using MD5 hash instead.
      Thanks to Frank Steinmetzger for the patch. (BR 264813)
    * Fixed issue with absentee toolbar on clear run (without config files). (BR 259615)
    * Fixed CD copying functionality. (BR 264050)
    * Fixed CUE tracks playback order. (BR 263237)
    * Prevent crash on exit when using Phonon-VLC.
    * Fixed crash in the queue editor when trying to show already
      removed items of the playlist. (BR 263308)
    * Fixed Mute button. (BR 253098)
    * Fixed issue with Organize collection, which made amarok remove newly copied tracks.
      (BR 263301)
    * Fixed wrong "Configure amarok" action position in tray icon popup menu. (BR 263330)