@@ -34,6 +34,8 @@ VERSION 2.4.1
       <bhargav.1191@gmail.com>. (BR 248690)
 
   BUGFIXES:
+    * Ask delete confirmation for all contents of folder at once instead of each individually.
+      Affects "Saved Playlists" and "Podcasts" (BR 246117)
     * Fixed unreadable text in lyrics applet in kde 4.6. (BR 265311)
     * Fixed tag dialog crash when sorting by genre and then changing tags.
     * Fixed track's statistics update in case of StopAfterCurrent playback mode
